[package]
name = "starline"
version = "0.1.0"
edition = "2024"
description = "A fast Rust status line for Claude Code"
repository = "https://github.com/anoldguy/starline"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = { version = "0.80", default-features = false, features = ["status"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
