[package]
name = "starline"
version = "0.4.0"
edition = "2024"
description = "A fast Rust status line for Claude Code"
repository = "https://github.com/anoldguy/starline"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
